[gd_scene load_steps=4 format=3 uid="uid://ci7dgouuspb0s"]

[ext_resource type="Script" uid="uid://c4oqekwgdxqd3" path="res://FrozenShard.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://be45l2dphh80u" path="res://FrozenShard.png" id="2"]
[ext_resource type="Material" uid="uid://cejsaej7lcx4e" path="res://Space/FrozenPlanetMat.tres" id="3"]

[node name="FrozenShard" type="Area2D"]
z_index = 1
collision_layer = 0
script = ExtResource("1")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
visible = false
polygon = PackedVector2Array(-23, -20, 8, -14, 20, 23, -10, 13)
disabled = true

[node name="Pivot" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="BackgroundArt" type="Sprite2D" parent="Pivot"]
unique_name_in_owner = true
modulate = Color(0.619608, 0.360784, 0.376471, 1)
rotation = 0.7853982
scale = Vector2(0.5, 0.5)
texture = ExtResource("2")

[node name="Circle33" type="Sprite2D" parent="Pivot"]
clip_children = 1
rotation = 0.7853982
scale = Vector2(0.5, 0.5)
texture = ExtResource("2")

[node name="Circle33" type="Sprite2D" parent="Pivot/Circle33"]
modulate = Color(0.8075, 0.871625, 0.95, 1)
material = ExtResource("3")
position = Vector2(-2.8284264, 2.8284273)
rotation = 1.5620697
scale = Vector2(1.0973508, 1.1167064)
texture = ExtResource("2")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
